--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Sentinel-X | AI-Enhanced Celo Blockchain Intelligence</title>
+    <meta name="description" content="Real-time Celo blockchain data with AI-powered insights. Explore blocks, analyze contracts, and predict prices with DeepSeek AI." />
+    <meta name="author" content="Sentinel-X" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Sentinel-X | Celo Blockchain Intelligence" />
+    <meta property="og:description" content="AI-Enhanced Real-Time Data Inference Indexer for Celo" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@SentinelX" />
   </head>
 
   <body>
