For Tech Hunter 2.01

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <title>Sentinel-X | AI-Enhanced Celo Blockchain Intelligence</title>
     <meta name="description" content="Real-time Celo blockchain data with AI-powered insights. Explore blocks, analyze contracts, and predict prices with DeepSeek AI." />
     <meta name="author" content="Sentinel-X" />
